--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,6 +1,3 @@
-// Load with --load-config examples/2.jsonc
-// Note that you must replace the image path to an existing image to display it.
-
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
@@ -60,7 +57,7 @@
         },
         {
             "type": "wm",
-            "key": " DE/WM",
+            "key": " WM",
             "keyColor": "blue"
         },
         {
@@ -80,12 +77,7 @@
         },
         {
             "type": "terminal",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wallpaper",
-            "key": "│ └󰸉",
+            "key": "│ └",
             "keyColor": "blue"
         },
         {
@@ -109,39 +101,9 @@
             "keyColor": "green"
         },
         {
-            "type": "memory",
-            "key": "│ ├󰑭",
-            "keyColor": "green"
-        },
-        {
-            "type": "swap",
-            "key": "│ ├󰓡",
-            "keyColor": "green"
-        },
-        {
             "type": "uptime",
-            "key": "│ ├󰅐",
+            "key": "│ └󰅐",
             "keyColor": "green"
-        },
-        {
-            "type": "display",
-            "key": "│ └󰍹",
-            "keyColor": "green"
-        },
-        {
-            "type": "sound",
-            "key": " SND",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "player",
-            "key": "│ ├󰥠",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "media",
-            "key": "│ └󰝚",
-            "keyColor": "cyan"
         },
         {
             "type": "custom",
