file structure for hypr monitors.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ source = ./colors.conf
 ### MONITORS ###
 ################
 
-monitor=eDP-1,1920x1080@60,auto,1
+monitor=,preferred,auto,1
 
 
 ###################
