hyprshot and hyprlock.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ exec-once = waybar & hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRSHOT_DIR,$HOME/Pictures
 
 
 ###################
@@ -212,12 +213,13 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, exec, hyprshot -m region
+bind = $mainMod, J, togglesplit
 bind = $mainMod SHIFT, R, exec, bash ~/.dotfiles/.config/waybar/reload.sh
+bind = $mainMod, escape, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
