--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ $browser = zen
 ### AUTOSTART ###
 #################
 
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & hypridle
 
 
 #############################
