--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -4,7 +4,7 @@ splash = false
 ipc = on
 
 # Preload images (speeds up switching)
-preload = ~/walls/1261646-2517977551.jpg
+preload = ~/.dotfiles/default_wallpaper.jpg
 
 # Set wallpapers per monitor (get names via: hyprctl monitors)
-wallpaper = ,~/walls/1261646-2517977551.jpg
+wallpaper = ,~/.dotfiles/default_wallpaper.jpg
