updated colors and hyprlock.

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,25 +3,80 @@ source = ./colors.conf
 background {
     monitor =
     path = screenshot
-    color = rgba(25, 20, 20, 1.0)
+    #color = rgba(25, 20, 20, 1.0)
     blur_passes = 2
+    contrast = 1
+    brightness = 0.5
+    vibrancy = 0.2
+    vibrancy_darkness = 0.2
+}
+
+general {
+    no_fade_in = true
+    no_fade_out = true
+    hide_cursor = false
+    grace = 0
+    disable_loading_bar = true
 }
 
 input-field {
     monitor =
     size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
+    outline_thickness = 2
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color=rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color=rgba(ff6633ee) rgba(ff0066ee) 40deg
+    dots_size = 0.2
+    dots_spacing = 0.35
+    dots_center = true
+    hide_input = false
 
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = false
-    rounding = 15
+    outer_color = $outline
+    inner_color = $inverse_primary
+    font_color = $on_primary_container
+    check_color = $on_error_container
+    fail_color = $error_container
 
-    position = 0, -20
+    fade_on_empty = true
+    rounding = -1
+
+    placeholder_text = What's the secret word?
+
+    position = 0, -200
+    halign = center
+    valign = center
+}
+
+# DATE
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+    color = $on_primary_container
+    font_size = 22
+    #font_family = JetBrains Mono
+    position = 0, 300
+    halign = center
+    valign = center
+}
+
+# TIME
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%-I:%M")"
+    color = $on_primary_container
+    font_size = 95
+    #font_family = JetBrains Mono
+    position = 0, 200
+    halign = center
+    valign = center
+}
+
+image {
+    monitor =
+    path = ~/.dotfiles/default_wallpaper.jpg
+    color = $surface_container
+    size = 150
+    border_size = 2
+    border_color = $outline
+    position = 0, 0
     halign = center
     valign = center
 }
