--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,8 +44,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $outline $outline_variant 45deg
+    col.inactive_border = $primary_container
 
     resize_on_border = false
     allow_tearing = false
@@ -63,7 +63,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $shadow
     }
 
     blur {
