--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -51,7 +51,7 @@ label {
     text = cmd[update:1000] echo "$(date +"%A, %B %d")"
     color = $on_primary_container
     font_size = 22
-    #font_family = JetBrains Mono
+    font_family = Hurmit
     position = 0, 300
     halign = center
     valign = center
@@ -63,7 +63,7 @@ label {
     text = cmd[update:1000] echo "$(date +"%-I:%M")"
     color = $on_primary_container
     font_size = 95
-    #font_family = JetBrains Mono
+    font_family = Hurmit
     position = 0, 200
     halign = center
     valign = center
