librewolf instead of zen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ source = ./setups/default.conf
 $terminal = wezterm
 $fileManager = pcmanfm
 $menu = wofi --show drun
-$browser = zen
+$browser = librewolf
 
 
 #################
