monitor updates for framework, home, and appstract

--- a/.config/hypr/setups/appstract.conf
+++ b/.config/hypr/setups/appstract.conf
@@ -1,3 +1,8 @@
 
+# dell
 # above
-monitor=DP-1,3440x1440@60,-760x-1440,1
+#monitor=DP-1,3440x1440@60,-760x-1440,1
+
+# framework
+# above
+monitor=DP-1,3440x1440@60,-440x-1440,1
