--- a/.config/hypr/setups/default.conf
+++ b/.config/hypr/setups/default.conf
@@ -1,7 +1,8 @@
 # main pc
-source = ./dell.conf
+#source = ./dell.conf
+source = ./framework.conf
 
 
 # monitors
-#source = ./home.conf
-source = ./appstract.conf
+source = ./home.conf
+#source = ./appstract.conf
