--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/walls
 monitors = All
-wallpaper = ~/walls/812553-1402886687.jpg
+wallpaper = ~/walls/bar.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
