samsung monitor setup

--- a/.config/hypr/setups/default.conf
+++ b/.config/hypr/setups/default.conf
@@ -4,5 +4,6 @@ source = ./framework.conf
 
 
 # monitors
-source = ./home.conf
+#source = ./home.conf
 #source = ./appstract.conf
+source = ./samsung.conf
