--- a/.config/hypr/setups/default.conf
+++ b/.config/hypr/setups/default.conf
@@ -6,4 +6,5 @@ source = ./framework.conf
 # monitors
 #source = ./home.conf
 #source = ./appstract.conf
-source = ./samsung.conf
+#source = ./samsung.conf
+source = ./diku.conf
