add pomodoro service, custom cursor is wip

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ $browser = librewolf
 ### AUTOSTART ###
 #################
 
-exec-once = waybar & hyprpaper & hypridle
+exec-once = waybar & hyprpaper & hypridle & uair
 
 
 #############################
@@ -31,6 +31,7 @@ exec-once = waybar & hyprpaper & hypridle
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,bibata-amber
 env = HYPRSHOT_DIR,$HOME/Pictures
 
 
