--- a/.config/hypr/setups/samsung.conf
+++ b/.config/hypr/setups/samsung.conf
@@ -1,7 +1,8 @@
 
 # framework
 # above
-monitor=DP-2,3440x1440@60,-440x-1440,1
+#monitor=DP-2,3440x1440@60,-440x-1440,1
+monitor=DP-5,3440x1440@60,-440x-1440,1
 
 # left
 #monitor=DP-3,3440x1440@60,-3440x0,1
