a bit of cleanup

--- a/.config/hypr/setups/default.conf
+++ b/.config/hypr/setups/default.conf
@@ -1,10 +1,10 @@
 # main pc
-#source = ./dell.conf
-source = ./framework.conf
+#source = ./pd/dell.conf
+source = ./pc/framework.conf
 
 
 # monitors
-#source = ./home.conf
-#source = ./appstract.conf
-source = ./samsung.conf
-#source = ./diku.conf
+source = ./monitor/home.conf
+#source = ./monitor/appstract.conf
+#source = ./monitor/samsung.conf
+#source = ./monitor/diku.conf
