--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,9 @@
 source = ./colors.conf
 
+# debug {
+#     disable_logs = false
+# }
+
 ################
 ### MONITORS ###
 ################
@@ -140,11 +144,6 @@ input {
 
 gestures {
     workspace_swipe = false
-}
-
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
 }
 
 
