rename for appstract ssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,7 +4,7 @@ Host github.com
   IdentityFile ~/.ssh/id_ed25519
   IdentitiesOnly yes
 
-Host dev.azure.com
+Host ssh.dev.azure.com
   HostName ssh.dev.azure.com
   User git
   IdentityFile ~/.ssh/appstract
