kitty instead of wezterm

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ source = ./setups/default.conf
 ### MY PROGRAMS ###
 ###################
 
-$terminal = wezterm
+$terminal = kitty
 $fileManager = pcmanfm
 $menu = wofi --show drun
 $browser = librewolf
