--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -26,9 +26,10 @@ output_path = '~/.cache/wal/colors.json'
 post_hook = 'pywalfox update'
 
 
-[templates.wezterm]
-input_path = './templates/wezterm.lua.tmpl'
-output_path = '~/.config/wezterm/colors.lua'
+[templates.kitty]
+input_path = './templates/kitty-colors.conf'
+output_path = '~/.config/kitty/colors.conf'
+post_hook = 'pkill -SIGUSR1 kitty'
 
 
 [templates.mako]
