hypr and waybar details

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,9 +33,10 @@ exec-once = waybar & hyprpaper & hypridle & uair
 ### ENVIRONMENT VARIABLES ###
 #############################
 
+env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,bibata-amber
 env = HYPRSHOT_DIR,$HOME/Pictures
 
 
