--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ source = ./setups/default.conf
 $terminal = kitty
 $fileManager = pcmanfm
 $menu = wofi --show drun
-$browser = librewolf
+$browser = firefox
 
 
 #################
