uair support for fedora, updated monitor refresh speed

--- a/.config/hypr/hyprland_sections/keybinds.conf
+++ b/.config/hypr/hyprland_sections/keybinds.conf
@@ -9,7 +9,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, exec, hyprshot -m region
 bind = $mainMod, J, togglesplit
-bind = $mainMod SHIFT, R, exec, bash ~/.dotfiles/.config/waybar/reload.sh
+bind = $mainMod SHIFT, R, exec, ~/.config/waybar/reload.sh
 bind = $mainMod, escape, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
