--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -26,7 +26,7 @@
     },
 
     "custom/uair": {
-      "format": "{icon} {}",
+      "format": "{icon} {text}",
       "format-icons": [
         "●●●●●●●●●●",
         "●●●●●●●●●○",
