--- a/.zotero/zotero/dmlqtsj5.default/compatibility.ini
+++ b/.zotero/zotero/dmlqtsj5.default/compatibility.ini
@@ -1,5 +1,5 @@
 [Compatibility]
-LastVersion=7.0.15_20250316033147/20240801134912
+LastVersion=7.0.24_20250816153206/20240801134912
 LastOSABI=Linux_x86_64-gcc3
-LastPlatformDir=/nix/store/rxp157d2m08hv9yqzbwabbxwshyihf89-zotero-7.0.15/usr/lib/zotero-bin-7.0.15
-LastAppDir=/nix/store/rxp157d2m08hv9yqzbwabbxwshyihf89-zotero-7.0.15/usr/lib/zotero-bin-7.0.15/app
+LastPlatformDir=/app/share/zotero
+LastAppDir=/app/share/zotero/app
