--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/walls
+folder = ~/.dotfiles
 monitors = All
-wallpaper = ~/walls/1.png
+wallpaper = ~/.dotfiles/wallpaper.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
@@ -10,7 +10,7 @@ sort = name
 color = #ffffff
 subfolders = False
 all_subfolders = False
-show_hidden = False
+show_hidden = True
 show_gifs_only = False
 post_command = ~/.config/hypr/scripts/on_wallpaper_update.sh "$wallpaper"
 number_of_columns = 3
@@ -22,4 +22,6 @@ swww_transition_fps = 60
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
+zen_mode = False
+stylesheet = /home/marius/.config/waypaper/style.css
 
