persistent wallpaper across reboot

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -4,7 +4,7 @@ splash = false
 ipc = on
 
 # Preload images (speeds up switching)
-preload = ~/.dotfiles/default_wallpaper.jpg
+preload = ~/wallpaper
 
 # Set wallpapers per monitor (get names via: hyprctl monitors)
-wallpaper = ,~/.dotfiles/default_wallpaper.jpg
+wallpaper = ,~/wallpaper
