--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/.dotfiles
+folder = ~/walls
 monitors = All
-wallpaper = ~/.dotfiles/wallpaper.jpg
+wallpaper = ~/walls/35014345-minimalist-mountains-night-4k-2793749791.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
