default tabs, and tab bar styled

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,9 +15,12 @@ allow_remote_control yes
 listen_on unix:@mykitty
 
 # Tab bar
+tab_bar_edge top
 tab_bar_style powerline
-tab_title_template "{index}: {title}"
-active_tab_title_template "● {index}: {title}"
+tab_powerline_style round
+tab_title_template "{title}"
+active_tab_title_template "{title}"
+startup_session default_tabs.session
 
 # ----- Tabs -----
 map alt+t new_tab
