hyprland monitor updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ env = PATH,$HOME/.cargo/bin:/usr/local/bin:/usr/bin:/bin
 #     disable_logs = false
 # }
 
+
 ################
 ### MONITORS ###
 ################
@@ -161,3 +162,6 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+workspace = 1, monitor:eDP-1, default:true
+workspace = 2, monitor:eDP-1
