--- a/.config/hypr/setups/monitor/appstract.conf
+++ b/.config/hypr/setups/monitor/appstract.conf
@@ -5,4 +5,7 @@
 
 # framework
 # above
-monitor=DP-2,3440x1440@60,-440x-1440,1
+#monitor=DP-2,3440x1440@60,-440x-1440,1
+
+# left
+monitor=DP-3,3440x1440@60,-3440x0,1
