--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -55,11 +55,12 @@
         "format-icons": {
             "1": "",
             "2": "",
-            "3": "",
-            "4": "",
+            "3": "",
+            "4": "",
         },
         "persistent-workspaces": {
-            "*": [1, 2, 3, 4],
+            "*": [ 3, 4 ],
+            "eDP-1": [ 1, 2 ],
         },
     },
 
