--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -163,5 +163,7 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-workspace = 1, monitor:eDP-1, default:true
-workspace = 2, monitor:eDP-1
+workspace = 1, monitor:0, default:true, persistent:true
+workspace = 2, monitor:0, persistent:true
+workspace = 3, monitor:1
+workspace = 4, monitor:1
