--- a/.config/hypr/setups/default.conf
+++ b/.config/hypr/setups/default.conf
@@ -4,7 +4,7 @@ source = ./pc/framework.conf
 
 
 # monitors
-source = ./monitor/home.conf
+#source = ./monitor/home.conf
 #source = ./monitor/appstract.conf
 #source = ./monitor/samsung.conf
-#source = ./monitor/diku.conf
+source = ./monitor/diku.conf
