--- a/.ssh/config
+++ b/.ssh/config
@@ -10,5 +10,12 @@ Host ssh.dev.azure.com
   IdentityFile ~/.ssh/appstract
   IdentitiesOnly yes
 
+Host tao
+    HostName os138.hpc.ku.dk
+    Port 443
+    User marius
+    IdentityFile ~/.ssh/id_rsa
+    IdentitiesOnly yes
+
 #Include ~/.ssh/config.local
 
