--- a/.ssh/config
+++ b/.ssh/config
@@ -17,5 +17,10 @@ Host tao
     IdentityFile ~/.ssh/id_rsa
     IdentitiesOnly yes
 
+Host smrc
+    Hostname 172.16.12.108
+    User mpottosen
+    #User smrc
+
 #Include ~/.ssh/config.local
 
