--- a/.ssh/config
+++ b/.ssh/config
@@ -10,7 +10,7 @@ Host ssh.dev.azure.com
   IdentityFile ~/.ssh/appstract
   IdentitiesOnly yes
 
-Host tao
+Host xian
     HostName os138.hpc.ku.dk
     Port 443
     User marius
