updated ssh config with diku machines

--- a/.ssh/config
+++ b/.ssh/config
@@ -17,6 +17,13 @@ Host xian
     IdentityFile ~/.ssh/id_rsa
     IdentitiesOnly yes
 
+Host yang
+    ProxyJump xian
+    HostName yang
+    User marius
+    IdentityFile ~/.ssh/id_rsa
+    IdentitiesOnly yes
+
 Host smrc
     Hostname 172.16.12.108
     User mpottosen
