--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -95,8 +95,8 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "",
+        "format-charging": "{capacity}% 󱐋",
+        "format-plugged": "{capacity}% ",
         "format-icons": ["󰁺", "󰁾", "󰂀", "󰁹"]
     },
 }
