--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,6 +2,9 @@ source = ./colors.conf
 
 # debug {
 #     disable_logs = false
+#     enable_stdout_logs = true
+#     colored_stdout_logs = true
+#     suppress_errors = false
 # }
 
 
@@ -20,7 +23,7 @@ source = ./setups/default.conf
 $terminal = kitty
 $fileManager = pcmanfm
 $menu = wofi --show drun
-$browser = firefox
+$browser = librewolf
 
 
 #################
