--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 Host github.com
   HostName github.com
   User git
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.ssh/github
   IdentitiesOnly yes
 
 Host ssh.dev.azure.com
@@ -14,14 +14,15 @@ Host xian
     HostName os138.hpc.ku.dk
     Port 443
     User marius
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/diku
     IdentitiesOnly yes
 
 Host yang
     ProxyJump xian
     HostName yang
+    Port 443
     User marius
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/diku
     IdentitiesOnly yes
 
 Host smrc
