--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/walls
+folder = ~/nixos/dotfiles
 monitors = All
-wallpaper = ~/walls/hd-minimalist-river_bmZraW6UmZqaraWkpJRoaWllrWZpaWU-4249568407.jpg
+wallpaper = ~/nixos/dotfiles/wallpaper.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
