--- a/.zotero/zotero/dmlqtsj5.default/compatibility.ini
+++ b/.zotero/zotero/dmlqtsj5.default/compatibility.ini
@@ -1,5 +1,5 @@
 [Compatibility]
-LastVersion=7.0.24_20250816153206/20240801134912
+LastVersion=7.0.27_20251016193620/20240801134912
 LastOSABI=Linux_x86_64-gcc3
-LastPlatformDir=/app/share/zotero
-LastAppDir=/app/share/zotero/app
+LastPlatformDir=/nix/store/vfc6x081zqsvx14ldx24d7a11x58k2j5-zotero-7.0.27/usr/lib/zotero-bin-7.0.27
+LastAppDir=/nix/store/vfc6x081zqsvx14ldx24d7a11x58k2j5-zotero-7.0.27/usr/lib/zotero-bin-7.0.27/app
