--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,6 +7,10 @@ source = ./colors.conf
 #     suppress_errors = false
 # }
 
+ecosystem {
+    no_update_news = true
+}
+
 
 ################
 ### MONITORS ###
