--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/nixos/dotfiles
+folder = ~/walls
 monitors = All
-wallpaper = ~/nixos/dotfiles/wallpaper.jpg
+wallpaper = ~/walls/landscape-mountains-5k-4h-3440x1440-394751055.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
